[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_maltose"
version = "0.0.1"
authors = [
  { name="Christopher Gaul", email="c.gaul@icamcyl.com" },
]
description = "Machine-learning code for predicting molecular properties"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
