[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maltose"
version = "1.0.0"
authors = [
  { name="Christopher Gaul", email="c.gaul@icamcyl.com" },
]
description = "Machine-learning code for predicting molecular properties"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/maltose", "scripts", "sample_data", "tests"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
